# docs/swagger.json
@@ -158,6 +158,51 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "Update resource name, sourceID, parent, etc",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Resources"
+                ],
+                "summary": "Update a resource by it's ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Resource ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Resource to be created",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/resource.Input"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "ok",
+                        "schema": {
+                            "$ref": "#/definitions/resource.Response"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/views.ErrView"
+                        }
+                    }
+                }
             }
         }
     },
@@ -187,6 +232,10 @@
         },
         "resource.Identifier": {
             "type": "object",
+            "required": [
+                "id",
+                "type"
+            ],
             "properties": {
                 "id": {
                     "type": "string"
@@ -236,6 +285,9 @@
         },
         "resource.Parent": {
             "type": "object",
+            "required": [
+                "data"
+            ],
             "properties": {
                 "data": {
                     "type": "object",
@@ -269,6 +321,9 @@
         },
         "resource.RelationshipsInput": {
             "type": "object",
+            "required": [
+                "parent"
+            ],
             "properties": {
                 "parent": {
                     "type": "object",
